--- a/config.json.example
+++ b/config.json.example
@@ -11,8 +11,8 @@
   "GITHUB": "https://github.com/Jupiterbold05/Platinum-V1",
   "GURL": "https://whatsapp.com/channel/0029VaeW5Tw4yltQOYIO5E2D",
   "THUMB_IMAGE": "https://i.imgur.com/gvdQSvi.jpeg",
-  "SUDO": "2349071978357",
-  "OWNER_NUMBER": "2348084644182",
+  "SUDO": "",
+  "OWNER_NUMBER": "2348077825595",
   "STYLE": "3",
   "GOODBYE": "false",
   "WELCOME": "false",
@@ -30,14 +30,14 @@
   "SAVE_STATUS_FROM": "",
   "READ_STATUS_FROM": "",
   "MENU": "2",
-  "PREFIX": "!",
+  "PREFIX": "X",
   "BRANCH": "main",
   "VERSION": "1.0.0",
   "CAPTION": "Ͳհҽ օղҽ ąҍօѵҽ ąӀӀ ☠️👑🌍™",
   "PACK_AUTHER": "ąҍօѵҽ ąӀӀ ☠️👑🌍",
   "PACK_NAME": "ąҍօѵҽ ąӀӀ ☠️👑🌍",
   "BOT_NAME": "Ͳհҽ օղҽ ąҍօѵҽ ąӀӀ ☠️👑🌍",
-  "OWNER_NAME": "ᴀʙᴏᴠᴇ ᴀʟʟ ☠️👑🌍",
+  "OWNER_NAME": "死_ＮＥＭＥＳ１Ｘ♠️",
   "ERROR_CHAT": "",
   "KOYEB_API": "false",
   "REMOVE_BG_KEY": "",
